
2007-08-10  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/calc-postats: Do not fail when domain or team is unknown, but
	simply delete the associated stat.  Do not stop when some file does
	not exist, but stubbornly continue after printing a warning.

2007-08-09  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Add the 'util-linux-ng' domain.

2007-08-08  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/extract-pot-files.sh: Add rule for 'libgphoto', use tabs
	consistently, move 'gettext' into alphabetical position.

	* registry/registry.sgml: Remove the obsolete domain 'mysecretdiary'.

2007-08-07  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Add a column to the domain index page that shows
	current version number, with a link to the POT file.

2007-08-06  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/generate-static-pages: Autodetect the type of each argument:
	whether it's a domain or a team.

2007-08-04  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Remove the obsolete domain 'tp-robot';
	don't bother with texts that only translators will see.

2007-08-02  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Remove sentence about submission, since the
	translation could be made externally.  Remove duplication of
	assignee messages; check that the package is not both assigned
	and externally translated; say that PO file is announced to the
	maintainer only when this is actually the case.

2007-08-01  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/Makefile, webgen/whydisclaim.html: Install a copy of the
	AUTHORS file on the website, and link to it properly.

2007-07-31  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/po.py, bin/tp-robot: Relax the regex for author lines still
	further, but let a failing second tighter check issue a warning.

2007-07-28  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/po.py, bin/tp-robot: Do not take just the first author line,